@@ -1,3 +1,8 @@
+2007-09-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tclLink.c (Tcl_UpdateLinkedVar): guard against var being
+	unlinked. [Bug 1740631] (maros)
+
 2007-09-10  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclCompile.c: fix tclInstructionTable entry for
